2006-06-14 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/PolygonBuilder.cpp: fixed
	bug in placePolygonHoles (and actually improved performance
	of it).

2006-06-13 Sandro Santilli <strk@refractions.net>

	* operation::overlay::PolygonBuilder: cleanups.
	* source/headers/geos/io/WKTReader.inl: added missing include
	for GEOS_DEBUG set case, use stderr for debugging output.
	* source/operation/overlay/LineBuilder.cpp: fixed unused
	parameter warning.
	* source/headers/geos/geomgraph/GeometryGraph.h: changed
	GeometryGraph::lineEdgeMap set comparison function to
	be pointer-based. Should be safe and much faster. Available
	tests all succeed.
	* source/geom/Geometry.cpp: added self comparison check
	in compareTo().
	
2006-06-12 Sandro Santilli <strk@refractions.net>

	* source/simplify/LineSegmentIndex.cpp: explicitly initialized
	parent class in constructors.
	* source/headers/geos/index/quadtree/Root.h,
	source/headers/geos/operation/distance/ConnectedElementPointFilter.h,
	source/headers/geos/operation/polygonize/Polygonizer.h:
	Removed unused parameter warnings.
	* source/headers/geos/geom/GeometryFilter.h:
	added assert(0) version of filter_ro() and filter_rw()
	to allow implementations to only defined the required
	one.
	* source/headers/geos/operation/polygonize/Polyginzer.h,
	source/headers/geos/index/quadtree/Root.h:
	Removed unused parameter warnings.
	* source/headers/geos/io/WKTWriter.h,
	source/io/WKTWriter.cpp: fixed compiler warnings,
	fixed some methods to omit unused parameters.
	* source/geom/CoordinateSequence.cpp,
	source/headers/geos/geom/CoordinateSequence.h,
	tests/unit/geom/CoordinateArraySequenceTest.cpp:
	Added equality and inequality operators and tests +
	indentation fixes and notes about things to be fixed.
	* source/planargraph/Node.cpp: implemented missing
	getEdgesBetween() method (untested).
	* source/headers/geos/planargraph/DirectedEdge.h,
	source/planargraph/DirectedEdge.cpp: